<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_nama"
            android:inputType="textPersonName"
            android:lines="1"
            android:autofillHints="Your Name here..."/>

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_alamat"
            android:inputType="text"
            android:lines="2"
            android:autofillHints="Your Address here..."/>

        <EditText
            android:id="@+id/no_hp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_no_hp"
            android:inputType="number"
            android:lines="1"
            android:autofillHints="Your Phone here..."/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_logout"
                android:textAllCaps="false"
                android:backgroundTint="#EEFF5858"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_simpan"
                android:textAllCaps="false"
                android:backgroundTint="#EEFF5858"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_show_data"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_sh_data"
                android:textAllCaps="false"
                android:backgroundTint="@color/common_google_signin_btn_text_light_focused"
                android:shadowColor="#FFFFFF"
                android:shadowRadius="20"
                android:textColor="@color/white"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>